src/Base/main/default/objects/Boat_Sample_Retail_Sale__c/fields/BatteryCost__c.field-meta.xml
<CustomField>
    <fullName>BatteryCost__c</fullName>
    <label>Cranking Battery Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>