src/Base/main/default/objects/Boat_Sample_Retail_Sale__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boat</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Boat Sample Retail Sales</relationshipLabel>
    <relationshipName>Sample_Retail_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>