src/Base/main/default/objects/Boat_Sample_Retail_Sale__c/fields/m_VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>m_VolumeDiscount__c</fullName>
    <label>Volume Discount Medium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>