src/Base/main/default/objects/Boat_Sample_Retail_Sale__c/fields/MercuryEngineRebate__c.field-meta.xml
<CustomField>
    <fullName>MercuryEngineRebate__c</fullName>
    <label>Mercury Boat Show Loose Engine Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>