src/Base/main/default/objects/Boat_Sample_Retail_Sale__c/fields/Motor_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Motor_Upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Upgrade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Motor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Boat Sample Retails Sales (Motor Upgrade)</relationshipLabel>
    <relationshipName>Sample_Retails_Sale_Motor_Upgrades</relationshipName>
    <type>Lookup</type>
</CustomField>